--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -19,6 +19,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="mask-icon" href="/favicon.svg" color="#ffffff" />
     <title>{title}</title>
   </head>
   <body>
