--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from "../Logo.astro";
+import Logo from "../Vectors/Logo.astro";
 import { header, logo, nav, navItem } from "./Header.css";
 ---
 
