--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-import Header from "../components/Home/Header.astro";
+import AboutMe from "../components/AboutMe/AboutMe.astro";
+import Footer from "../components/Footer/Footer.astro";
+import Header from "../components/Header/Header.astro";
 import Home from "../components/Home/Home.astro";
 import Page from "../layouts/Page.astro";
 ---
@@ -7,4 +9,6 @@ import Page from "../layouts/Page.astro";
 <Page title="Blake Zimmerman">
   <Header />
   <Home />
+  <AboutMe />
+  <Footer />
 </Page>
