--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import AboutMe from "../components/AboutMe/AboutMe.astro";
+import Experience from "../components/Experience/Experience.astro";
 import Footer from "../components/Footer/Footer.astro";
 import Header from "../components/Header/Header.astro";
 import Home from "../components/Home/Home.astro";
@@ -10,5 +11,6 @@ import Page from "../layouts/Page.astro";
   <Header />
   <Home />
   <AboutMe />
+  <Experience />
   <Footer />
 </Page>
