Add contact section

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -7,6 +7,7 @@ import { header, logo, nav, navItem } from "./Header.css";
   <Logo className={logo} />
   <nav class={nav}>
     <a class={navItem} href="#about-me">About Me</a>
+    <a class={navItem} href="#contact">Contact</a>
     <a class={navItem} href="https://blog.blakez.dev">Blog</a>
   </nav>
 </header>
