--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import AboutMe from "../components/AboutMe/AboutMe.astro";
+import Contact from "../components/Contact/Contact.astro";
 import Experience from "../components/Experience/Experience.astro";
 import Footer from "../components/Footer/Footer.astro";
 import Header from "../components/Header/Header.astro";
@@ -12,5 +13,6 @@ import Page from "../layouts/Page.astro";
   <Home />
   <AboutMe />
   <Experience />
+  <Contact />
   <Footer />
 </Page>
