--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import AboutMe from "../components/AboutMe/AboutMe.astro";
 import Contact from "../components/Contact/Contact.astro";
+import Education from "../components/Education/Education.astro";
 import Experience from "../components/Experience/Experience.astro";
 import Footer from "../components/Footer/Footer.astro";
 import Header from "../components/Header/Header.astro";
@@ -13,6 +14,7 @@ import Page from "../layouts/Page.astro";
   <Home />
   <AboutMe />
   <Experience />
+  <Education />
   <Contact />
   <Footer />
 </Page>
