Better favicon support for Safari

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -18,6 +18,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="/favicon.png" type="image/png" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link
       rel="mask-icon"
