--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,7 +4,7 @@ import { header, logo, nav, navItem } from "./Header.css";
 ---
 
 <header class={header}>
-  <a class={navItem} href="/" aria-label="Home">
+  <a class={navItem} href="/#" aria-label="Home">
     <Logo className={logo} />
   </a>
   <nav class={nav}>
