--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -32,6 +32,7 @@ const { title } = Astro.props;
       color="#000000"
       media="(prefers-color-scheme: dark)"
     />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
     <title>{title}</title>
