Fully integrate blog into website

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -6,6 +6,6 @@ const currentYear = new Date().getFullYear();
 
 <footer class={footer}>
   <small class={footerText}>
-    Designed & Developed by Blake Zimmerman<br />&copy; {currentYear}
+    Designed & Developed by Blake Zimmerman<br />&copy; {currentYear} All Rights Reserved
   </small>
 </footer>
