--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,12 +4,12 @@ import { header, logo, nav, navItem } from "./Header.css";
 ---
 
 <header class={header}>
-  <a class={navItem} href="/#" aria-label="Home">
+  <a class={navItem} href="/" aria-label="Home">
     <Logo className={logo} />
   </a>
   <nav class={nav}>
-    <a class={navItem} href="#about-me">About Me</a>
-    <a class={navItem} href="#contact">Contact</a>
-    <a class={navItem} href="https://blog.blakez.dev">Blog</a>
+    <a class={navItem} href="/#about-me">About Me</a>
+    <a class={navItem} href="/#contact">Contact</a>
+    <a class={navItem} href="/blog">Blog</a>
   </nav>
 </header>
