--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -1,16 +1,21 @@
 ---
-import { lightThemeClass, darkThemeClass } from "../styles/theme.css";
-import "../styles/global.css";
-
 import "@fontsource/poppins/400.css";
 import "@fontsource/poppins/500.css";
 import "@fontsource/poppins/700.css";
+import "../styles/global.css";
+
+import Footer from "../components/Footer/Footer.astro";
+import Header from "../components/Header/Header.astro";
+import { paddingForHeader } from "../styles/helpers.css";
+import { darkThemeClass, lightThemeClass } from "../styles/theme.css";
 
 export interface Props {
   title: string;
+  description: string;
+  keywords: string;
 }
 
-const { title } = Astro.props;
+const { title, description, keywords } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -36,19 +41,15 @@ const { title } = Astro.props;
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
     <title>{title}</title>
-    <meta
-      name="description"
-      content="An NYC-based software engineer that's dedicated to his craft."
-    />
-    <meta
-      name="keywords"
-      content="Blake,Zimmerman,JavaScript,TypeScript,React,Software,Engineering,Web,Developer,NYC"
-    />
+    <meta name="description" content={description} />
+    <meta name="keywords" content={keywords} />
   </head>
   <body>
-    <main>
+    <Header />
+    <main class={paddingForHeader}>
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
 <script define:vars={{ darkThemeClass }}>
