--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -43,6 +43,7 @@ const { title, description, keywords } = Astro.props;
     <title>{title}</title>
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body>
     <Header />
