Add Google Analytics

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -16,6 +16,7 @@ export interface Props {
 }
 
 const { title, description, keywords } = Astro.props;
+const GA_MEASUREMENT_ID = import.meta.env.PUBLIC_GA_MEASUREMENT_ID;
 ---
 
 <!DOCTYPE html>
@@ -44,6 +45,19 @@ const { title, description, keywords } = Astro.props;
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords} />
     <link rel="sitemap" href="/sitemap-index.xml" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      type="text/partytown"
+      src={`https://www.googletagmanager.com/gtag/js?id=${GA_MEASUREMENT_ID}`}
+    ></script>
+    <script type="text/partytown" define:vars={{ GA_MEASUREMENT_ID }}>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", GA_MEASUREMENT_ID);
+    </script>
   </head>
   <body>
     <Header />
