Add scroll down button to landing page

--- a/src/components/AboutMe/AboutMe.astro
+++ b/src/components/AboutMe/AboutMe.astro
@@ -1,6 +1,6 @@
 ---
 import Section from "../../layouts/PageSection/PageSection.astro";
-import Arrow from "../Vectors/Arrow.astro";
+import LongArrowRight from "../Vectors/LongArrowRight.astro";
 import {
   arrow,
   headshot,
@@ -40,7 +40,7 @@ import {
   <figure class={latteContainer}>
     <div class={latteCaptionContainer}>
       <figcaption class={latteCaption}>My latte art</figcaption>
-      <Arrow className={arrow} />
+      <LongArrowRight className={arrow} />
     </div>
     <picture>
       <source type="image/webp" srcset="/images/latte.webp" />
