--- a/src/components/BlogPost/BlogPost.astro
+++ b/src/components/BlogPost/BlogPost.astro
@@ -35,6 +35,6 @@ const { data, Content } = Astro.props;
     </div>
     <div class={divider}></div>
     <BlogAuthorDetails />
-    <a href="/blog">← Read more posts</a>
+    <a rel="prefetch" href="/blog">← Read more posts</a>
   </div>
 </div>
