--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -1,7 +1,7 @@
 ---
-import "@fontsource/poppins/400.css";
-import "@fontsource/poppins/500.css";
-import "@fontsource/poppins/700.css";
+import "@fontsource/poppins/latin-400.css";
+import "@fontsource/poppins/latin-500.css";
+import "@fontsource/poppins/latin-700.css";
 import "../styles/global.css";
 
 import Footer from "../components/Footer/Footer.astro";
