Prevent flash of fallback font on load

--- a/src/components/Home/Computer.astro
+++ b/src/components/Home/Computer.astro
@@ -1,10 +1,11 @@
 ---
 import { visuallyHide } from "../../styles/helpers.css";
-import { computerContainer, promptCommand, promptPath } from "./Computer.css";
+import { computerContainer, monospace, promptCommand, promptPath } from "./Computer.css";
 ---
 
 <figure class={computerContainer} role="img" aria-labelledby="computer-caption">
-  <pre>
+  <pre
+    class={monospace}>
       ,-----------------------,
      +-----------------------+ |
      |  .-----------------.  | |
