Minor visual improvements

--- a/src/components/BlogAuthorDetails/BlogAuthorDetails.astro
+++ b/src/components/BlogAuthorDetails/BlogAuthorDetails.astro
@@ -20,9 +20,9 @@ import {
     />
   </picture>
   <div class={authorDetails}>
-    <p class={greeting}>Hi! I'm Blake Zimmerman</p>
+    <p class={greeting}>Hi! I'm Blake Zimmerman.</p>
     <p class={description}>
-      I'm a software engineer trying to turn my thoughts into words
+      I'm a software engineer trying to turn my thoughts into words.
     </p>
   </div>
 </div>
