--- a/src/components/AboutMe/AboutMe.astro
+++ b/src/components/AboutMe/AboutMe.astro
@@ -30,7 +30,9 @@ import {
     </p>
     <p class={paragraph}>
       While I often do full-stack web development, I primarily focus on the front-end. I’m
-      most interested in design systems and functional programming.
+      most interested in design systems and functional programming. I always enjoy reading
+      about emerging developments in these fields and researching how I can leverage them
+      to create better software experiences.
     </p>
     <p class={paragraph}>
       When I’m not at my desk coding, you can find me at the espresso machine practicing
