--- a/src/components/Experience/Experience.astro
+++ b/src/components/Experience/Experience.astro
@@ -1,5 +1,4 @@
 ---
-import clsx from "clsx";
 import { experienceItems } from "../../data/experience";
 import Section from "../../layouts/PageSection/PageSection.astro";
 import {
@@ -22,7 +21,7 @@ import {
           <source type="image/webp" srcset={`${experience.logoHref}.webp`} />
           <source type="image/png" srcset={`${experience.logoHref}.png`} />
           <img
-            class={clsx(companyLogo, experience.logoClassName)}
+            class:list={[companyLogo, experience.logoClassName]}
             src={`${experience.logoHref}.png`}
             alt={`${experience.companyName} logo`}
           />
