--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -16,7 +16,7 @@ const { title, description, keywords } = Astro.props;
 const GA_MEASUREMENT_ID = import.meta.env.PUBLIC_GA_MEASUREMENT_ID;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class={lightThemeClass}>
   <head>
     <meta charset="UTF-8" />
@@ -26,18 +26,21 @@ const GA_MEASUREMENT_ID = import.meta.env.PUBLIC_GA_MEASUREMENT_ID;
       href="/fonts/poppins-latin-400-normal.woff2"
       as="font"
       type="font/woff2"
+      crossorigin="anonymous"
     />
     <link
       rel="preload"
       href="/fonts/poppins-latin-500-normal.woff2"
       as="font"
       type="font/woff2"
+      crossorigin="anonymous"
     />
     <link
       rel="preload"
       href="/fonts/poppins-latin-700-normal.woff2"
       as="font"
       type="font/woff2"
+      crossorigin="anonymous"
     />
     <link rel="icon" href="/favicon.png" type="image/png" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
