--- a/src/components/BlogPost/BlogPost.astro
+++ b/src/components/BlogPost/BlogPost.astro
@@ -1,7 +1,7 @@
 ---
 import "./Markdown.css";
 
-import type { AstroComponentFactory } from "astro/dist/runtime/server";
+import type { AstroComponentFactory } from "astro/runtime/server/index.js";
 import type { CollectionEntry } from "astro:content";
 
 import { formatDate } from "../../utils/formatDate";
